--- a/main.scss
+++ b/main.scss
@@ -150,9 +150,13 @@ footer a:hover {
 }
 
 @media screen and (max-width: 500px) {
-  h1 {
-    font-size: 4em;
-    margin: 0;
+
+  header {
+    h1 {
+      font-size: 4em;
+      margin: 0;
+    }
+
   }
 
   img:first-child {
