--- a/main.scss
+++ b/main.scss
@@ -4,8 +4,22 @@ html, body {
 }
 
 nav {
+  background: rgba(0,0,0,.5);
+  color: #fff;
+  height: 4em;
+
+  ul {
+    margin: 0;
+  }
+
   li {
     display: inline;
+    margin-right: 0.8em;
+  }
+
+  .container {
+    position: relative;
+    top: 1em;
   }
 }
 
