--- a/main.scss
+++ b/main.scss
@@ -49,12 +49,24 @@ nav {
   height: 4em;
   text-align: left;
 
+  img {
+    // width: 30px;
+  }
+
+  h1 {
+    font-size: 1em;
+    margin-top: 0;
+    margin-left: 1.5em;
+  }
+
   ul {
     margin: 0;
+    padding-left: 0;
   }
 
   li {
-    display: inline;
+    // display: inline;
+    list-style: none;
     margin-right: 1.3em;
   }
 
@@ -92,7 +104,9 @@ section .container {
 }
 
 /* 1st section*/
-img:first-child {
+
+.intro {
+img {
   border-radius: 100%;
   float: left;
   width: 250px;
@@ -101,14 +115,17 @@ img:first-child {
   margin-top: -50px;
 }
 
-/* 2nd section */
-img:last-child {
-  width: 170px;
-  margin-top: -50px;
 }
+
+/* 2nd section */
 
 .origins {
   text-align: right;
+
+img {
+  width: 170px;
+  margin-top: -50px;
+}
 }
 
 h2:nth-child(1) {
