--- a/main.scss
+++ b/main.scss
@@ -26,9 +26,9 @@ header {
     font-weight: bolder;
     display: inline-block;
   }
-  h1 {
+  h2 {
     text-transform: uppercase;
-    margin: -20px 0 0;
+    margin: -25px 0 0;
     font-size: 6.5em;
 
     /* stroke from CSS tricks */
@@ -55,19 +55,25 @@ nav {
 
   h1 {
     font-size: 1em;
-    margin-top: 0;
-    margin-left: 1.5em;
+    margin-left: 2.3em;
+    margin-top: -27px;
+    text-transform: uppercase;
   }
 
   ul {
     margin: 0;
     padding-left: 0;
+    display: none;
   }
 
   li {
     // display: inline;
     list-style: none;
     margin-right: 1.3em;
+  }
+
+  li:hover {
+    background-color: green;
   }
 
   .container {
@@ -126,12 +132,12 @@ img {
   width: 170px;
   margin-top: -50px;
 }
-}
-
 h2:nth-child(1) {
   text-align: left;
   margin: 0;
 }
+}
+
 
 section .container div {
   float: left;
@@ -184,14 +190,14 @@ footer a:hover {
 @media screen and (max-width: 500px) {
 
   header {
-    h1 {
+    h1:first-child {
       font-size: 4em;
       margin: 0;
     }
 
   }
 
-  img:first-child {
+  .intro img{
     float: none;
     display: block;
     margin-left: auto;
