--- a/main.scss
+++ b/main.scss
@@ -18,7 +18,7 @@ header {
 
   .container {
   position: relative;
-  top: 50px;
+  top: 100px;
 }
   span {
     color: #000;
@@ -61,19 +61,23 @@ nav {
   }
 
   ul {
-    margin: 0;
+    margin-top: 1.5em;
     padding-left: 0;
     display: none;
+    max-width: 200px;
+    background-color: rgba(0,0,0,.5);
+    text-align: center;
   }
 
   li {
     // display: inline;
     list-style: none;
-    margin-right: 1.3em;
+    padding: 5px 10px;
   }
 
   li:hover {
-    background-color: green;
+    background-color: #fff;
+    color: #000;
   }
 
   .container {
@@ -190,7 +194,7 @@ footer a:hover {
 @media screen and (max-width: 500px) {
 
   header {
-    h1:first-child {
+    h2 {
       font-size: 4em;
       margin: 0;
     }
