--- a/main.scss
+++ b/main.scss
@@ -121,26 +121,25 @@ img {
 }
 
 /* 2nd section */
-
 .origins {
   text-align: right;
 
-img {
-  width: 170px;
-  margin-top: -50px;
-}
-h2 {
-  text-align: left;
-  margin: 0;
-}
+  img {
+    width: 170px;
+    margin-top: -50px;
+  }
+  h2 {
+    text-align: left;
+    margin: 0;
+  }
+   .container div {
+    float: left;
+    max-width: 650px;
+    text-align: left;
+  }
 }
 
 
-section .container div {
-  float: left;
-  max-width: 650px;
-  text-align: left;
-}
 
 /* 3rd section */
 .tennis {
