--- a/main.scss
+++ b/main.scss
@@ -48,6 +48,7 @@ nav {
   color: #fff;
   height: 4em;
   text-align: left;
+  padding-left: 1em;
 
   h1 {
     font-size: 1em;
@@ -78,6 +79,7 @@ nav {
   .container {
     position: relative;
     top: 1em;
+
   }
 }
 
