--- a/main.scss
+++ b/main.scss
@@ -44,6 +44,12 @@ header {
 }
 
 nav {
+   position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1000;
+  width: 100%;
   background: rgba(0,0,0,.5);
   color: #fff;
   height: 4em;
