--- a/main.scss
+++ b/main.scss
@@ -56,6 +56,16 @@ nav {
   text-align: left;
   padding-left: 1em;
 
+  a {
+    text-decoration: none;
+    color: #fff;
+    display: block;
+  }
+
+  a:hover {
+    color: #000;
+  }
+
   h1 {
     font-size: 1em;
     margin-left: 2.3em;
