--- a/main.scss
+++ b/main.scss
@@ -173,7 +173,7 @@ img {
 /* 3rd section */
 .tennis {
   height: 500px;
-  background: url(tennis.jpg) no-repeat center center;
+  background: url(images/tennis.jpg) no-repeat center center;
   background-size: cover;
   border: none;
 }
