--- a/main.scss
+++ b/main.scss
@@ -143,8 +143,8 @@ img {
   float: left;
   width: 250px;
   height: 250px;
-  margin-right: 60px;
-  margin-top: -50px;
+  // margin-right: 60px;
+  // margin-top: -50px;
 }
 
 }
