--- a/main.scss
+++ b/main.scss
@@ -238,6 +238,7 @@ footer a:hover {
     padding: 0 15px;
   }
 
+  // shouldn't be affected intro section
   img:last-child {
     display: block;
     margin-left: auto;
