--- a/main.scss
+++ b/main.scss
@@ -75,11 +75,12 @@ section {
   section {
     height: 300px;
     padding-bottom: 0;
-  }
 
-  section h2 {
+    h2 {
     text-align: start;
   }
+  }
+
 }
 
 nav {
