--- a/main.scss
+++ b/main.scss
@@ -214,8 +214,7 @@ footer {
 }
 
 @media screen and (max-width: 850px) {
-    section p,
-    h2:nth-child(1) {
+    section p {
         padding: 0 15px;
     }
 }
