--- a/main.scss
+++ b/main.scss
@@ -17,7 +17,7 @@ header {
     height: 500px;
     background: url(http://freebigpictures.com/wp-content/uploads/evergreen-forest.jpg) no-repeat center center;
     background-size: cover;
-    color: #fff;
+    color: #000;
     .container {
         position: relative;
         top: 100px;
