--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,5 @@
+@import "grid";
+
 html,
 body {
     margin: 0;
@@ -7,6 +9,10 @@ body {
 .container {
     max-width: 940px;
     margin: 0 auto;
+}
+
+.test {
+  @extend .col-8;
 }
 
 
