--- a/main.scss
+++ b/main.scss
@@ -179,7 +179,7 @@ section {
 
 /* 2nd section */
 
-.origins {
+.location {
     img {
         width: 170px;
         margin-top: 35px;
@@ -190,7 +190,7 @@ section {
 @media screen and (min-width: 1024px) {
   /* remember to change max/min 1024 */
 
-  .origins {
+  .location {
     img {
       float: right;
       margin: 0;
