--- a/main.scss
+++ b/main.scss
@@ -6,7 +6,7 @@ body {
     font-family: "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-.container {
+.wrapper {
     max-width: 940px;
     margin: 0 auto;
 }
@@ -20,7 +20,7 @@ header {
     background: url(http://freebigpictures.com/wp-content/uploads/evergreen-forest.jpg) no-repeat center center;
     background-size: cover;
     color: #fff;
-    .container {
+    .wrapper {
         position: relative;
         top: 100px;
     }
@@ -87,7 +87,7 @@ nav {
         background-color: #fff;
         color: #000;
     }
-    .container {
+    .wrapper {
         position: relative;
         top: 1em;
     }
@@ -114,7 +114,7 @@ nav {
 section {
     border-bottom: 1px solid #eee;
     padding-bottom: 50px;
-    .container {
+    .wrapper {
         margin-top: 70px;
     }
     h2 {
@@ -216,7 +216,7 @@ footer {
     background-color: #000;
     color: #fff;
     text-align: center;
-    .container {
+    .wrapper {
         position: relative;
         top: 30px;
     }
