--- a/main.scss
+++ b/main.scss
@@ -201,7 +201,7 @@ section {
 
 /* 3rd section */
 
-.tennis {
+.large-image {
     height: 500px;
     background: url(../images/tennis.jpg) no-repeat center center;
     background-size: cover;
