--- a/main.scss
+++ b/main.scss
@@ -20,10 +20,8 @@ header {
     background: url(http://freebigpictures.com/wp-content/uploads/evergreen-forest.jpg) no-repeat center center;
     background-size: cover;
     color: #fff;
-    .wrapper {
-        position: relative;
-        top: 100px;
-    }
+    padding-top: 100px;
+
     h2 {
         font-size: 3.2em;
         margin: 0;
@@ -39,7 +37,6 @@ header {
     /* remember to change max/min 1024 */
     header {
         h2 {
-            margin: -25px 0 0;
             font-size: 6.5em;
         }
     }
