--- a/main.scss
+++ b/main.scss
@@ -85,8 +85,7 @@ nav {
         color: #000;
     }
     .wrapper {
-        position: relative;
-        top: 1em;
+        margin-top: 1em;
     }
 }
 
