get rid of some more relative ps

--- a/main.scss
+++ b/main.scss
@@ -213,8 +213,7 @@ footer {
     color: #fff;
     text-align: center;
     .wrapper {
-        position: relative;
-        top: 30px;
+        padding-top: 30px;
     }
     ul {
         padding: 0;
