--- a/main.scss
+++ b/main.scss
@@ -197,7 +197,7 @@ section {
 
 /* 3rd section */
 
-.large-image {
+.tennis-image {
     height: 500px;
     background: url(../images/tennis.jpg) no-repeat center center;
     background-size: cover;
