--- a/main.scss
+++ b/main.scss
@@ -164,6 +164,10 @@ section {
         p {
           padding: 0;
         }
+
+        .intro-text {
+            padding-left: 30px;
+        }
     }
 }
 
