use boot responsive class

--- a/main.scss
+++ b/main.scss
@@ -120,12 +120,9 @@ section {
         text-align: center;
     }
     img {
-        display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 100%;
-        max-width: 100%;
-        height: auto;
+        @extend .img-responsive;
     }
 
     p {
