code more concise

--- a/main.scss
+++ b/main.scss
@@ -199,11 +199,9 @@ section {
 @media screen and (min-width: 1024px) {
   /* remember to change max/min 1024 */
 
-  .location {
-    img {
+  .location img {
       margin: 0;
       padding: 0;
-    }
   }
 }
 
