--- a/main.scss
+++ b/main.scss
@@ -72,7 +72,7 @@ nav {
         text-transform: uppercase;
     }
     ul {
-        margin-top: 1.4em;
+        margin-top: 1.35em;
         padding-left: 0;
         display: none;
         max-width: 200px;
@@ -80,6 +80,7 @@ nav {
         text-align: center;
     }
     li {
+        font-size: 1.2em;
         list-style: none;
         padding: 5px 10px;
     }
