--- a/main.scss
+++ b/main.scss
@@ -111,8 +111,12 @@ nav {
 
 /* all sections */
 
-section {
+.location, .intro {
     border-bottom: 1px solid #eee;
+
+}
+
+section {
     padding-bottom: 50px;
     .wrapper {
         margin-top: 70px;
