working on project section

--- a/main.scss
+++ b/main.scss
@@ -217,6 +217,19 @@ section {
     border: none;
 }
 
+.projects {
+    text-align: center;
+
+    h2 {
+    margin-top: 70px;
+    text-align: center;
+    }
+
+    .wrapper {
+    margin-top: 0;
+    }
+}
+
 
 /* footer */
 
