margin for mobile

--- a/main.scss
+++ b/main.scss
@@ -230,6 +230,11 @@ section {
         margin: 14px auto;
     }
 
+    .col-md-6 {
+    margin-bottom: 1em;
+
+    }
+
     .wrapper {
     margin-top: 0;
     }
