--- a/main.scss
+++ b/main.scss
@@ -241,7 +241,16 @@ section {
 
     .col-md-6 {
     margin-bottom: 1em;
+    padding: 0 30px;
 
+    }
+
+
+    @media screen and (min-width: 1240px) {
+      /* remember to change max/min 1024 */
+      .col-md-6 {
+        padding: 0 15px;
+      }
     }
 
     .wrapper {
