--- a/main.scss
+++ b/main.scss
@@ -252,11 +252,13 @@ section {
     }
 
 
-    @media screen and (min-width: 1240px) {
+    @media screen and (min-width: 1024px) {
       /* remember to change max/min 1024 */
       .col-md-6 {
         padding: 0 15px;
       }
+
+
     }
 
     .wrapper {
@@ -268,6 +270,13 @@ section {
     }
 }
 
+
+@media screen and (min-width: 1024px) {
+  /* remember to change max/min 1024 */
+  .projects {
+        padding-bottom: 50px;
+      }
+}
 
 /* footer */
 
