--- a/main.scss
+++ b/main.scss
@@ -68,6 +68,10 @@ nav {
         margin-top: -25px;
         text-transform: uppercase;
     }
+
+    h1 a:hover {
+        color: #fff;
+    }
     ul {
         margin-top: 1.35em;
         padding-left: 0;
