--- a/main.scss
+++ b/main.scss
@@ -62,6 +62,11 @@ nav {
         color: #000;
         text-decoration: inherit;
     }
+
+    a:focus {
+        color: inherit;
+        text-decoration: inherit;
+    }
     h1 {
         font-size: 1.2em;
         margin-left: 2.3em;
