--- a/main.scss
+++ b/main.scss
@@ -141,7 +141,7 @@ section {
       padding: 0 15px;
     }
 
-    .author-intro, .author-location {
+    .author-intro, .author-location, .project-row{
   @extend .row;
 }
 
@@ -160,6 +160,7 @@ section {
     .location-text {
         @extend .col-md-9;
     }
+
 }
 
 
@@ -215,6 +216,10 @@ section {
 
 .projects {
     height: auto;
+
+    .project {
+        @extend .col-md-6;
+    }
 
     h2 {
     margin-top: 80px;
