--- a/main.scss
+++ b/main.scss
@@ -139,6 +139,7 @@ section {
 
     p {
       padding: 0 15px;
+      font-size: 1.15em;
     }
 
     .author-intro, .author-location, .project-row{
