padding for sect imgs on small screens

--- a/main.scss
+++ b/main.scss
@@ -134,6 +134,7 @@ section {
     img {
         margin-left: auto;
         margin-right: auto;
+        padding: 0 20px;
         @extend .img-responsive;
     }
 
