--- a/main.scss
+++ b/main.scss
@@ -122,6 +122,10 @@ nav {
     border-bottom: 1px solid #eee;
     margin-top: 70px;
 
+    img {
+        padding: 0 20px;
+    }
+
 }
 
 section {
@@ -132,7 +136,7 @@ section {
     img {
         margin-left: auto;
         margin-right: auto;
-        padding: 0 20px;
+
         @extend .img-responsive;
     }
 
