--- a/_grid.scss
+++ b/_grid.scss
@@ -209,11 +209,12 @@ a {
   color: #428bca;
   text-decoration: none;
 }
-a:hover,
-a:focus {
-  color: #2a6496;
-  text-decoration: underline;
-}
+// manually comment out
+// a:hover,
+// a:focus {
+//   color: #2a6496;
+//   text-decoration: underline;
+// }
 a:focus {
   outline: thin dotted #333;
   outline: 5px auto -webkit-focus-ring-color;
