change font color

--- a/main.scss
+++ b/main.scss
@@ -102,7 +102,7 @@ nav {
     padding: 10px 40px;
     background-color: #fff;
     text-decoration: none;
-    color: green;
+    color: #000;
 }
 
 .btn:hover,
