--- a/main.scss
+++ b/main.scss
@@ -128,10 +128,12 @@ nav {
     li:first-child:hover {
         background-color: #fff;
         padding: 19px 10px 14px;
+        border-radius: 5px;
     }
 
     .name:hover {
         color: #000;
+
     }
 
     li:hover {
