button hover size

--- a/main.scss
+++ b/main.scss
@@ -126,7 +126,7 @@ nav {
 
     li:first-child:hover {
         background-color: #fff;
-        padding: 19px 10px 14px;
+        padding: 8px 10px;
         border-radius: 5px;
     }
 
