--- a/main.scss
+++ b/main.scss
@@ -210,6 +210,11 @@ section {
       @extend .col-md-8;
     }
 
+    .intro-text p, .location-text p {
+        width: 80%;
+        margin: 0 auto;
+    }
+
     .location-text {
         @extend .col-md-9;
     }
@@ -229,6 +234,7 @@ section {
 
         p {
           padding: 0;
+          float: left;
         }
 
         .intro-text {
