change nav hover colors

--- a/main.scss
+++ b/main.scss
@@ -59,7 +59,7 @@ nav {
         display: block;
     }
     a:hover {
-        color: #000;
+        // color: #000;
         text-decoration: inherit;
     }
 
@@ -87,7 +87,7 @@ nav {
         padding: 5px 10px;
     }
     li:hover {
-        background-color: #fff;
+        background-color: #B8C4CC;
         color: #000;
     }
 
@@ -125,13 +125,13 @@ nav {
     }
 
     li:first-child:hover {
-        background-color: #fff;
+        background-color: #B8C4CC;
         padding: 8px 10px;
         border-radius: 5px;
     }
 
     .name:hover {
-        color: #000;
+        // color: #000;
 
     }
 
