change header btn color

--- a/main.scss
+++ b/main.scss
@@ -151,9 +151,9 @@ nav {
     display: inline-block;
     margin-top: 30px;
     padding: 10px 40px;
-    background-color: #fff;
+    background-color: #B8C4CC;
     text-decoration: none;
-    color: #000;
+    color: #fff;
     border-radius: 5px;
 }
 
