slight color change

--- a/main.scss
+++ b/main.scss
@@ -366,7 +366,7 @@ footer {
     }
 
     a:hover {
-        background-color: #A9B7B9;
+        background-color: #A1ACB2;
         text-decoration: none;
         color: inherit;
 
