--- a/main.scss
+++ b/main.scss
@@ -16,7 +16,7 @@ body {
 header {
     text-align: center;
     height: 500px;
-    background: url(http://freebigpictures.com/wp-content/uploads/evergreen-forest.jpg) no-repeat center center;
+    background: url(../img/forest.jpg) no-repeat center center;
     background-size: cover;
     color: #fff;
     padding-top: 100px;
