--- a/main.scss
+++ b/main.scss
@@ -286,6 +286,13 @@ section {
 }
 
 // portfolio section
+
+.projects:nth-child(3) {
+    h2 {
+        margin-top: 0px;
+    }
+}
+
 .projects {
     height: auto;
 
@@ -351,6 +358,10 @@ section {
   .projects {
         padding-bottom: 50px;
       }
+
+  .projects:nth-child(2) {
+    padding-bottom: 0px;
+}
 }
 
 /* footer */
