--- a/main.scss
+++ b/main.scss
@@ -289,7 +289,7 @@ section {
 
 .projects:nth-child(3) {
     h2 {
-        margin-top: 0px;
+        margin: 0px 0px 5px;
     }
 }
 
@@ -312,7 +312,7 @@ section {
     p {
 
         text-align: center;
-        margin: 20px auto;
+        margin: 10px auto;
         font-size: 1.15em;
     }
 
