--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,7 @@
 @import "grid";
 
+$gray: #A1ACB2;
+
 html,
 body {
     margin: 0;
@@ -87,7 +89,7 @@ nav {
         padding: 5px 10px;
     }
     li:hover {
-        background-color: #A1ACB2;
+        background-color: $gray;
         color: #000;
     }
 
@@ -125,7 +127,7 @@ nav {
     }
 
     li:first-child:hover {
-        background-color: #A1ACB2;
+        background-color: $gray;
         padding: 8px 10px;
         border-radius: 5px;
     }
@@ -151,7 +153,7 @@ nav {
     display: inline-block;
     margin-top: 30px;
     padding: 10px 30px;
-    background-color: #A1ACB2;
+    background-color: $gray;
     text-decoration: none;
     color: #fff;
     border-radius: 5px;
@@ -391,7 +393,7 @@ footer {
     }
 
     a:hover {
-        background-color: #A1ACB2;
+        background-color: $gray;
         text-decoration: none;
         color: inherit;
 
