--- a/main.scss
+++ b/main.scss
@@ -6,7 +6,7 @@ $gray: #A1ACB2;
 html,
 body {
     margin: 0;
-    font-family: "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: 'Droid Serif', serif;
 }
 
 .wrapper {
