remove background img

--- a/main.scss
+++ b/main.scss
@@ -19,8 +19,8 @@ body {
 header {
     text-align: center;
     height: 500px;
-    background: url(../img/forest.jpg) no-repeat center center;
-    background-size: cover;
+    // background: url(../img/forest.jpg) no-repeat center center;
+    // background-size: cover;
     color: #fff;
     padding-top: 100px;
 
