--- a/main.scss
+++ b/main.scss
@@ -236,6 +236,7 @@ section {
         padding-bottom: 0;
         h2 {
             text-align: start;
+            font-size: 1.7em;
         }
 
         p {
