increase font-size

--- a/main.scss
+++ b/main.scss
@@ -303,6 +303,7 @@ section {
         a:last-child {
         margin-top: 1em;
         display: inline-block;
+        font-size: 1.2em;
     }
     }
 
