--- a/main.scss
+++ b/main.scss
@@ -312,6 +312,10 @@ section {
         display: inline-block;
         font-size: 1.2em;
     }
+
+        p {
+            width: auto;
+        }
     }
 
     h2 {
