spacing between paragraph and link

--- a/main.scss
+++ b/main.scss
@@ -316,6 +316,7 @@ section {
         p {
             width: auto;
             text-align: left;
+            margin-bottom: -10px;
         }
     }
 
