--- a/main.scss
+++ b/main.scss
@@ -378,6 +378,11 @@ footer {
     background-color: #000;
     color: #fff;
     text-align: center;
+
+    img {
+        width: 50px;
+    }
+
     .wrapper {
         padding-top: 30px;
     }
@@ -395,13 +400,13 @@ footer {
         padding: 32px 5px;
     }
 
-    a:hover {
-        background-color: $gray;
-        text-decoration: none;
-        color: inherit;
+    // a:hover {
+    //     background-color: $gray;
+    //     text-decoration: none;
+    //     color: inherit;
 
-        transition: background-color .7s;
-    }
+    //     transition: background-color .7s;
+    // }
 }
 
 
