maybe keep the hover stuff

--- a/main.scss
+++ b/main.scss
@@ -397,16 +397,16 @@ footer {
 
     a {
         color: inherit;
-        padding: 32px 5px;
+        padding: 36px 5px 33px;
     }
 
-        // a:hover {
-        //     background-color: $gray;
-        //     text-decoration: none;
-        //     color: inherit;
+        a:hover {
+            background-color: $gray;
+            text-decoration: none;
+            color: inherit;
 
-        //     transition: background-color .7s;
-        // }
+            transition: background-color .7s;
+        }
 }
 
 
