--- a/main.scss
+++ b/main.scss
@@ -9,6 +9,10 @@ body {
     font-family: 'Droid Serif', serif;
 }
 
+body {
+    background-color: #4D6E7F;
+}
+
 .wrapper {
     max-width: 940px;
     margin: 0 auto;
@@ -176,6 +180,7 @@ nav {
 }
 
 section {
+    color: #E7F6FF;
     padding-bottom: 50px;
     h2 {
         text-align: center;
