--- a/main.scss
+++ b/main.scss
@@ -161,7 +161,7 @@ nav {
 
 .btn:hover,
 .btn:focus {
-    background-color: rgba(0, 0, 0, .5);;
+    background-color: rgba(0, 0, 0, .5);
     color: #fff;
     text-decoration: inherit;
     border: 1px solid #fff;
