--- a/main.scss
+++ b/main.scss
@@ -127,6 +127,7 @@ nav {
 
     li:first-child {
         text-transform: uppercase;
+        font-weight: 600;
     }
 
     li:first-child:hover {
