link color for porjects

--- a/main.scss
+++ b/main.scss
@@ -317,6 +317,7 @@ section {
         margin-top: 1em;
         display: inline-block;
         font-size: 1.2em;
+        color: #9ADBFF;
     }
 
         p {
