--- a/main.scss
+++ b/main.scss
@@ -70,16 +70,24 @@ nav {
 
     h1 {
         font-size: 1.2em;
-        margin-left: 2.3em;
-        margin-top: -25px;
+        margin-left: 1.8em;
+        margin-top: -31px;
         text-transform: uppercase;
+
+    }
+
+    h1 a {
+        padding: 8px 10px;
     }
 
     h1 a:hover {
+        display: inline-block;
         color: #fff;
+        background-color: $gray;
+        border-radius: 5px;
     }
     ul {
-        margin-top: 1.35em;
+        margin-top: -0.2em;
         padding-left: 0;
         display: none;
         max-width: 200px;
@@ -194,7 +202,7 @@ section {
 
     p {
       padding: 0 15px;
-      font-size: 1.15em;
+      font-size: 1.23em;
     }
 
     .author-intro, .author-location, .project-row{
