--- a/main.scss
+++ b/main.scss
@@ -118,6 +118,7 @@ nav {
 
   nav {
     ul {
+        margin-top: 0;
         text-align: left;
         display: block;
         max-width: initial;
