--- a/main.scss
+++ b/main.scss
@@ -76,6 +76,8 @@ nav {
 
     }
 
+    // guessing there's an optimization
+    // opp somewhere around here.
     h1 a {
         padding: 8px 10px;
     }
