giving javascript proijct sectiomn a bottom border

--- a/main.scss
+++ b/main.scss
@@ -308,6 +308,11 @@ section {
 
 .projects:nth-child(2) {
     padding-bottom: 0px;
+
+    .wrapper {
+        border-bottom: 1px solid #fff;
+
+    }
 }
 
 .projects {
