--- a/main.scss
+++ b/main.scss
@@ -301,6 +301,8 @@ section {
 // portfolio section
 
 .projects:nth-child(3) {
+    margin-top: 1.5em;
+
     h2 {
         margin: 0px 0px 5px;
     }
