--- a/main.scss
+++ b/main.scss
@@ -131,6 +131,17 @@ nav {
         display: none;
     }
 
+    // h1 a {
+    //     padding: 8px 10px;
+    // }
+
+    // h1 a:hover {
+    //     display: inline-block;
+    //     color: #fff;
+    //     background-color: $gray;
+    //     border-radius: 5px;
+    // }
+
 
     a, li, li:first-child {
         display: inline;
