same stuff, less code

--- a/main.scss
+++ b/main.scss
@@ -160,7 +160,7 @@ nav {
 
     li:first-child:hover {
         background-color: $gray;
-        padding: 8px 10px;
+        // padding: 8px 10px;
         border-radius: 5px;
     }
 
