think thats how

--- a/main.scss
+++ b/main.scss
@@ -146,6 +146,11 @@ nav {
         padding: 8px 10px;
     }
 
+    li:first-child a:hover {
+        background-color: $gray;
+        border-radius: 5px;
+    }
+
     // why do i have to wait until i'm touching
     // the actual anchor element to be able to click?
 
@@ -159,11 +164,11 @@ nav {
     }
 
     li:first-child:hover {
-        background-color: $gray;
-        // take this padding away, then put it on the anchor
-        padding: 8px 10px;
-        // padding: 0;
-        border-radius: 5px;
+        // background-color: $gray;
+        // // take this padding away, then put it on the anchor
+        // // padding: 5px 10px;
+        // // padding: 0;
+        // border-radius: 5px;
     }
 
     li:hover {
