--- a/main.scss
+++ b/main.scss
@@ -1,8 +1,6 @@
 // normalize is here
 @import "grid";
-
 $gray: #A1ACB2;
-
 html,
 body {
     margin: 0;
@@ -18,6 +16,7 @@ body {
     margin: 0 auto;
 }
 
+
 /* header */
 
 header {
@@ -25,9 +24,6 @@ header {
     height: 500px;
     color: #fff;
     padding-top: 100px;
-
-
-
     h2 {
         font-size: 3.2em;
         margin: 0;
@@ -58,26 +54,21 @@ nav {
     background: rgba(0, 0, 0, .4);
     height: 4em;
     padding-left: 1em;
-
     a {
         text-decoration: none;
         color: #fff;
         display: block;
         padding: 8px 10px;
     }
-
     a:hover {
         text-decoration: inherit;
     }
-
     h1 {
         font-size: 1.2em;
         margin-left: 1.8em;
         margin-top: -31px;
         text-transform: uppercase;
-
     }
-
     h1 a:hover {
         display: inline-block;
         color: #fff;
@@ -92,70 +83,60 @@ nav {
         background-color: rgba(0, 0, 0, .5);
         text-align: center;
     }
-
     li {
         font-size: 1.2em;
         list-style: none;
     }
-
     li:hover {
         background-color: $gray;
         color: #000;
     }
-
     li:first-child {
         display: none;
     }
-
     .wrapper {
         margin-top: 1em;
     }
 }
 
-
 @media screen and (min-width: 700px) {
-  /* remember to change max/min 1024 */
-
-  nav {
-    ul {
-        margin-top: 0;
-        text-align: left;
-        display: block;
-        max-width: initial;
-        background-color: transparent;
+    /* remember to change max/min 1024 */
+    nav {
+        ul {
+            margin-top: 0;
+            text-align: left;
+            display: block;
+            max-width: initial;
+            background-color: transparent;
+        }
+        h1,
+        img,
+        li:nth-child(2) {
+            display: none;
+        }
+        li:first-child a {
+            padding: 8px 10px;
+        }
+        li:first-child a:hover {
+            background-color: $gray;
+            border-radius: 5px;
+        }
+        a,
+        li,
+        li:first-child {
+            display: inline;
+        }
+        li:first-child {
+            text-transform: uppercase;
+            font-weight: 600;
+        }
+        li:hover {
+            background-color: transparent;
+        }
+        a:hover {
+            color: #fff;
+        }
     }
-
-    h1, img, li:nth-child(2) {
-        display: none;
-    }
-
-    li:first-child a {
-        padding: 8px 10px;
-    }
-
-    li:first-child a:hover {
-        background-color: $gray;
-        border-radius: 5px;
-    }
-
-    a, li, li:first-child {
-        display: inline;
-    }
-
-    li:first-child {
-        text-transform: uppercase;
-        font-weight: 600;
-    }
-
-    li:hover {
-        background-color: transparent;
-    }
-
-    a:hover {
-        color: #fff;
-    }
-
-  }
 }
 
 .btn {
@@ -178,16 +159,15 @@ nav {
     border: 1px solid #fff;
 }
 
+
 /* all sections */
 
-
-.location, .intro {
+.location,
+.intro {
     margin-top: 70px;
-
     img {
         padding: 0 20px;
     }
-
 }
 
 section {
@@ -199,51 +179,42 @@ section {
     img {
         margin-left: auto;
         margin-right: auto;
-
         @extend .img-responsive;
     }
-
     p {
-      padding: 0 15px;
-      font-size: 1.23em;
+        padding: 0 15px;
+        font-size: 1.23em;
     }
-
-    .author-intro, .author-location, .project-row{
-  @extend .row;
-}
-
+    .author-intro,
+    .author-location,
+    .project-row {
+        @extend .row;
+    }
     .intro-image {
-      @extend .col-md-4;
+        @extend .col-md-4;
     }
-
     .location-image {
         @extend .col-md-3;
     }
-
-    .intro-text{
-      @extend .col-md-8;
+    .intro-text {
+        @extend .col-md-8;
     }
-
-    .intro-text p, .location-text p {
+    .intro-text p,
+    .location-text p {
         margin: 0 auto;
     }
-
     .location-text {
         @extend .col-md-9;
     }
-
 }
-
 
 @media screen and (min-width: 700px) {
-  /* remember to change max/min 1024 */
-  .intro-text p, .location-text p {
+    /* remember to change max/min 1024 */
+    .intro-text p,
+    .location-text p {
         width: 90%;
     }
-
 }
-
-
 
 @media screen and (min-width: 1024px) {
     /* remember to change max/min 1024 */
@@ -254,20 +225,16 @@ section {
             text-align: start;
             font-size: 1.7em;
         }
-
         p {
-          padding: 0;
-
+            padding: 0;
         }
-
         .intro-text {
             padding-left: 30px;
         }
-
-        .intro-text p, .location-text p {
-        float: left;
-    }
-
+        .intro-text p,
+        .location-text p {
+            float: left;
+        }
     }
 }
 
@@ -291,18 +258,15 @@ section {
 }
 
 @media screen and (min-width: 1024px) {
-  /* remember to change max/min 1024 */
-
-  .location img {
-      margin: 0;
-  }
+    /* remember to change max/min 1024 */
+    .location img {
+        margin: 0;
+    }
 }
 
 // portfolio section
-
 .projects:nth-child(3) {
     margin-top: 1.5em;
-
     h2 {
         margin: 0px 0px 5px;
     }
@@ -310,91 +274,67 @@ section {
 
 .projects:nth-child(2) {
     padding-bottom: 0px;
-
     .wrapper {
         border-bottom: 1px solid #fff;
-
     }
 }
 
 .projects {
     height: auto;
-
     @media screen and (min-width: 700px) {
-      /* remember to change max/min 1024 */
-      p {
-      width: 500px;
-
-      }
+        /* remember to change max/min 1024 */
+        p {
+            width: 500px;
+        }
     }
     .project {
         @extend .col-md-6;
-
-
         a:last-child {
-        margin-top: 1em;
-        display: inline-block;
-        font-size: 1.2em;
-        color: #9ADBFF;
-    }
-
+            margin-top: 1em;
+            display: inline-block;
+            font-size: 1.2em;
+            color: #9ADBFF;
+        }
         p {
             width: auto;
             margin-bottom: -10px;
         }
     }
-
     h2 {
-    margin-top: 80px;
-    text-align: center;
+        margin-top: 80px;
+        text-align: center;
     }
-
     p {
-
         text-align: center;
         margin: 10px auto;
         font-size: 1.15em;
     }
-
-
-
     .col-md-6 {
-    margin-bottom: 1em;
-    padding: 0 30px;
-    text-align: center;
-
+        margin-bottom: 1em;
+        padding: 0 30px;
+        text-align: center;
     }
-
-
-
-
     @media screen and (min-width: 1024px) {
-      /* remember to change max/min 1024 */
-      .col-md-6 {
-        padding: 0 15px;
-      }
-
-
+        /* remember to change max/min 1024 */
+        .col-md-6 {
+            padding: 0 15px;
+        }
     }
-
     .wrapper {
-    margin-top: 0;
+        margin-top: 0;
     }
-
     img {
         border: 1px solid #000;
     }
 }
 
-
-
 @media screen and (min-width: 1024px) {
-  /* remember to change max/min 1024 */
-  .projects {
+    /* remember to change max/min 1024 */
+    .projects {
         padding-bottom: 50px;
-      }
-
+    }
 }
+
 
 /* footer */
 
@@ -403,11 +343,9 @@ footer {
     background-color: #000;
     color: #fff;
     text-align: center;
-
     img {
         width: 80px;
     }
-
     .wrapper {
         padding-top: 20px;
     }
@@ -419,17 +357,15 @@ footer {
         display: inline;
         padding: 28px 5px;
     }
-
     a {
         padding: 51px 5px 53px;
     }
-
-    a:hover, a:focus {
+    a:hover,
+    a:focus {
         background-color: $gray;
         transition: background-color .7s;
     }
 }
-
 
 .opaque {
     opacity: 0.6;
