messing with ease

--- a/main.scss
+++ b/main.scss
@@ -150,6 +150,7 @@ nav {
     background-color: rgba(0, 0, 0, .5);
     color: #fff;
     border: 1px solid #fff;
+    transition: all .3s ease-in-out;
 }
 
 
