add port stuff to main

--- a/main.scss
+++ b/main.scss
@@ -247,7 +247,7 @@ section {
 
 .location .wrapper {
     padding-bottom: 70px;
-    border-bottom: 1px solid #eee;
+    // border-bottom: 1px solid #eee;
     img {
         margin-top: 35px;
     }
