--- a/main.scss
+++ b/main.scss
@@ -156,6 +156,12 @@ nav {
 
 /* all sections */
 
+.projects:nth-child(4) {
+    background-color: #9ADBFF;
+    color: #4D6E7F;
+    // padding-top: 10px;
+}
+
 .location,
 .intro {
     padding-top: 50px;
@@ -264,7 +270,7 @@ section {
 .projects:nth-child(3) {
     margin-top: 1.5em;
     h2 {
-        margin: 0px 0px 5px;
+        padding: 0px 0px 5px;
     }
 
     p {
@@ -301,7 +307,7 @@ section {
         }
     }
     h2 {
-        margin-top: 80px;
+        padding-top: 50px;
         text-align: center;
     }
     p {
