--- a/main.scss
+++ b/main.scss
@@ -278,6 +278,11 @@ section {
     }
 }
 
+.btn-row {
+    @extend .row;
+    text-align: center;
+}
+
 .projects:nth-child(2) {
     padding-bottom: 0px;
     .wrapper {
