--- a/main.scss
+++ b/main.scss
@@ -140,6 +140,7 @@ nav {
     padding: 10px 30px;
     background-color: $gray;
     color: #fff;
+    // maybe now inverting colors would be good
     border: 1px solid transparent;
     text-decoration: none;
     border-radius: 5px;
