--- a/main.scss
+++ b/main.scss
@@ -141,6 +141,7 @@ nav {
     background-color: $gray;
     color: #fff;
     // maybe now inverting colors would be good
+    // button doesnt look that great at start of port sect
     border: 1px solid transparent;
     text-decoration: none;
     border-radius: 5px;
